# gameOfLife

./: CMakeLists.txt
src/: gameOfLife.cpp  gameOfLife.hpp  main.cpp
tests/: testGameOfLife.cpp
